<resources>
    <string name="app_name">StayFitaBit</string>
    <string name="home">Start</string>
    <string name="run">Run</string>
    <string name="pushups">Push-Ups</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="calories">Calories</string>
    <string name="open_navigation">Open Navigation</string>
    <string name="close_navigation">Close Navigation</string>
    <string name="start_run">Start Run</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="standard">Default</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="email_address">eMail-Address</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_link">Already have an Account? Login here!</string>
    <string name="register_link">Register here!</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_pushups">Total Pushups</string>
    <string name="total_duration">Total Duration</string>
    <string name="total_calories">Total Calories</string>
    <string name="workout">Workout</string>
    <string name="completed">Completed</string>
    <string name="remaining">Remaining</string>
    <string name="next_workout">Next Workout</string>
    <string name="sets">Sets</string>
    <string name="total">Total</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance (km)</string>
    <string name="pace">Pace (min/km)</string>
    <string name="account">Account</string>
    <string name="forename">Forename</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="weight">Weight (kg)</string>
    <string name="size">Size (cm)</string>
    <string name="save">Save</string>
    <string name="stretching">Stretching</string>
    <string name="map_options">Map Options</string>
    <string name="activity">Activity</string>
    <string name="order">Order</string>
    <string name="all">All</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="count">Count</string>
    <string name="please_wait">Please wait..</string>
    <string name="invalid_mail_address">Invalid Mail-Address</string>
    <string name="invalid_password">Password has to contain 6 characters</string>
    <string name="user_added">new User added</string>
    <string name="pause">Pause</string>
    <string name="start_workout">Starting Workout</string>
    <string name="finished_workout">Workout finished</string>
    <string name="finish_workout">Finishing Workout?</string>
    <string name="workout_plan">Workout Plan</string>
    <string name="level">Level</string>
    <string name="day">Day</string>
    <string name="invalid_password_confirm">Passwords are not matching</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="gps_disabled">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="invalid_forename">Invalid Forename</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_age">Invalid Age (1 - 100)</string>
    <string name="invalid_weight">Invalid Weight (1 - 500)</string>
    <string name="invalid_size">Invalid Size (1 - 300)</string>
    <string name="user_saved">User saved</string>
    <string name="stretching_practice_1">Place your rear foot at a 90 degree angle to your front foot. Slide the innerside of the rear leg to the front, until you feel the stretching.  Keep your body upright during the exercise. You can support yourself on your front leg. Repeat this exercise with the other leg.</string>
    <string name="stretching_practice_2">Put your hands up to the air and strech one of your legs by putting it in rear position. Your ball of the rear foot has to be on the ground. Now slide your heel backwards to the ground until you feel the stretching. In order to emphasize the streching put your knee of the streched leg to the back. Repeat this exercise with your other leg.</string>
    <string name="stretching_practice_3">Stand up and keep your legs closed. Angle your right leg to the back and grap it with your right hand. Now slide your pelves to the front until you feel the stretching. Keep in this position for about 20 seconds and then relax your leg. Repeat this exercise three times.</string>
</resources>
