<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_navigation_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_navigation_run"
            android:icon="@drawable/ic_directions_run"
            android:title="@string/run" />
        <item
            android:id="@+id/menu_navigation_pushups"
            android:icon="@drawable/ic_pushup"
            android:title="@string/pushups" />
        <item
            android:id="@+id/menu_navigation_history"
            android:icon="@drawable/ic_list"
            android:title="@string/history" />
        <item
            android:id="@+id/menu_navigation_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/menu_navigation_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>