<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/account"
                android:textColor="@color/colorPrimaryDark"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/settings_personal_header"
                android:src="@drawable/divider_primarydark"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_forename_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/settings_forename_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/forename"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:id="@+id/settings_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/settings_name_textView">
                <ToggleButton
                    android:id="@+id/settings_male_toogleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOff="@string/male"
                    android:textOn="@string/male" />
                <ToggleButton
                    android:id="@+id/settings_female_toogleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOff="@string/female"
                    android:textOn="@string/female" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_age_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:id="@+id/settings_age_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/age"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_weight_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:id="@+id/settings_weight_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/weight"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_size_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:id="@+id/settings_size_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/size"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/settings_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/save"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
