<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2.2"
            android:background="@drawable/border"
            android:elevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/run_duration_textView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:gravity="bottom"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30dp"
                    android:text="00:00:00"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/duration"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:padding="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/run_pace_textView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textAlignment="center"
                        android:gravity="bottom"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="00:00"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/pace"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:padding="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/run_distance_textView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textAlignment="center"
                        android:gravity="bottom"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="0,00"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/distance"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">
            <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/run_mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/run_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_add"
        android:tint="@android:color/white"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp" />
</FrameLayout>
